// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Container> html tree props added 1`] = `
<svg
  className="test-class"
  height={100}
  stoke="none"
  width={200}
>
  <g
    transform="translate(20, 10)"
  />
</svg>
`;

exports[`<Container> renders children 1`] = `
<svg
  height={100}
  width={200}
>
  <text>
    Extra child
  </text>
  <g
    transform="translate(20, 10)"
  >
    <Link
      key="Black"
      keyProp="name"
      pathProps={{}}
      source={
        {
          "data": {
            "name": "Colour",
          },
          "x": 1,
          "y": 2,
        }
      }
      target={
        {
          "data": {
            "name": "Black",
          },
          "x": 100,
          "y": 50,
        }
      }
      x1={1}
      x2={100}
      y1={2}
      y2={50}
    />
    <Node
      direction="ltr"
      gProps={{}}
      key="Colour"
      keyProp="name"
      labelProp="name"
      name="Colour"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={1}
      y={2}
    />
    <Node
      direction="ltr"
      gProps={{}}
      key="Black"
      keyProp="name"
      labelProp="name"
      name="Black"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={100}
      y={50}
    />
  </g>
</svg>
`;

exports[`<Container> renders correctly 1`] = `
<svg
  height={100}
  width={200}
>
  <g
    transform="translate(20, 10)"
  >
    <Link
      key="Black"
      keyProp="name"
      pathProps={{}}
      source={
        {
          "data": {
            "name": "Colour",
          },
          "x": 1,
          "y": 2,
        }
      }
      target={
        {
          "data": {
            "name": "Black",
          },
          "x": 100,
          "y": 50,
        }
      }
      x1={1}
      x2={100}
      y1={2}
      y2={50}
    />
    <Node
      direction="ltr"
      gProps={{}}
      key="Colour"
      keyProp="name"
      labelProp="name"
      name="Colour"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={1}
      y={2}
    />
    <Node
      direction="ltr"
      gProps={{}}
      key="Black"
      keyProp="name"
      labelProp="name"
      name="Black"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={100}
      y={50}
    />
  </g>
</svg>
`;
